PharmaDemo/src/objects/Target__c.object
<CustomObject>
    <fields>
        <fullName>MedRep_Name__c</fullName>
        <formula>MedRep__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MedRep UserName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medical Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Identifier</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Target</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MyTarget</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Target</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsTargets</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>My Team&apos;s Targets</label>
    </listViews>
    <nameField>
        <label>Target of</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>